Bug Fix Register verify user age upper than 13 years old